# HackBIA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
backend/app/: actions.py  agents.py  events.py  ingest.py  main.py  ontology.py  probe_llm.py  scenarios.py  seed.py
backend/data/: customers.csv  demo_events.jsonl  foundry.duckdb  ontology.baseline.yaml  ontology.yaml  orders.csv  tickets.csv
backend/data/upload_demo/: employees.csv  exits.csv  generate.py  reviews.csv
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  foundry.baml  generators.baml  tests.baml
docs/: DEMO.md  agentic-systems-playbook.html  contracts.md  plan.md  ps.json
frontend/: capture.mjs  index.html  package.json  shots.mjs  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  layout.test.ts  layout.ts  lineage.test.ts  lineage.ts  reducer.test.ts  reducer.ts  sse.test.ts  sse.ts  store.ts  types.ts  vite-env.d.ts
frontend/src/components/: AgentFeedPanel.tsx  ApprovalsPanel.tsx  BackendOfflinePanel.tsx  (+8 more)
tests/: test_actions.py  test_agents.py  test_api.py  test_demo_events.py  test_demo_ops.py  test_events.py  test_ingest.py  test_ontology.py  test_scenarios.py  test_seed.py  test_upload_pack.py
video/: .gitignore  README.md  package.json  tsconfig.json
video/src/: DemoVideo.tsx  Root.tsx  captions.check.ts  captions.ts  colors.ts  footage.ts  scenarios.ts
(+9 files in other folders)
