[project]
name = "epam-hackathon"
version = "0.1.0"
description = "mini Palantir"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.49.0",
]
