[tool.pytest.ini_options]
addopts = "-m 'not llm'"
markers = ["llm: test makes a real Cerebras/LLM network call (excluded by default)"]

[project]
name = "epam-hackathon"
version = "0.1.0"
description = "mini Palantir"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sse-starlette>=3.4.5",
    "strands-agents[openai]>=1.45.0",
    "uvicorn>=0.49.0",
]
